--- a/academy_cinemas.html
+++ b/academy_cinemas.html
@@ -135,16 +135,16 @@
         <div class="container my-5">
             <ul class="nav nav-inline">
                 <li class="nav-inline-item">
-                    <small><a class="nav-link-inline active" href="#">Movie Rewards<small></a>
+                    <small><a class="nav-link-inline active" href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Movie Rewards</small></a>
                 </li>
                 <li class="nav-inline-item">
-                    <small><a class="nav-link" href="#">Movies@news.com<small></a>
+                    <small><a class="nav-link-inline" href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Movies@news.com</small></a>
                 </li>
                 <li class="nav-inline-item">
-                    <small><a class="nav-link" href="#">Info@acedemycinemas.com<small></a>
+                    <small><a class="nav-link-inline" href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Info@acedemycinemas.com</small></a>
                 </li>
                 <li class="nav-inline-item">
-                    <small class="nav-link">&copy; 2019 Acedemy Cinemas &reg;<small>
+                    <small class="nav-link-inline">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&copy;2019 Acedemy Cinemas &reg;</small>
                 </li>                  
             </ul>
         </div>            
