--- a/Pg390_assignment.html
+++ b/Pg390_assignment.html
@@ -8,8 +8,16 @@
     </head>
 
     <body>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script>document.body.className += ' fade-out';
+        $(function() {
+            $('body').removeClass('fade-out');
+        });
+        </script>
+
         <div class="container">
-            <div class="myimg">
+            <div class="myImg">
                 <img src="./Images/pdx.jpg" alt="Portland">
                 <div class="overlay"></div>
                 <div class="text"><h2>Welcome to Oregon</h2>h2></div>
@@ -19,14 +27,14 @@
 
         <div class="row">
             <div class="column"></div>
-                <p>Portland is the largest and most populous city in the U.S. state of Oregon and the seat of Multnomah County.
+                <p style="font-size:2vw;">Portland is the largest and most populous city in the U.S. state of Oregon and the seat of Multnomah County.
                 It is a major port in the Willamette Valley region of the Pacific Northwest, at the confluence of the Willamette and Columbia rivers. 
                 As of 2018, Portland had an estimated population of 653,115 making it the 25th most populated city in the United States and the second-most populous in the Pacific Northwest after Seattle.
                 Approximately 2.4 million people live in the Portland metropolitan statistical area (MSA), making it the 25th most populous in the United States. 
                 Its combined statistical area (CSA) ranks 19th-largest with a population of around 3.2 million. 
                 Approximately 60% of Oregon's population resides within the Portland metropolitan area.</p>
             <div class="column"></div>
-                <p>The city operates with a commission-based government guided by a mayor and four commissioners as well as Metro, the only directly elected metropolitan planning organization in the United States.
+                <p style="font-size:2vw;">The city operates with a commission-based government guided by a mayor and four commissioners as well as Metro, the only directly elected metropolitan planning organization in the United States.
                 The city government is notable for its land-use planning and investment in public transportation.
                 Portland is frequently recognized as one of the world's most environmentally conscious cities because of its high walkability, large community of bicyclists, farm-to-table dining, expansive network of public transportation options, and over 10,000 acres (4,000 hectares) of public parks.
                 As a result, Portland consistently ranks highly in quality of life in the United States.
@@ -48,17 +56,40 @@
                 </tr>
             </table>
         </div>
+
+        <button class="open-button" onclick="openForm()">Open Form</button>
+        <div class="form-popup" id="myForm">
+            <form class="form-container">
+              <h1>Submit information</h1>
+
+              <label for="Name"><b>Name</b></label>
+              <input type="text" placeholder="Enter  Full Name" name="name" required>
+
+              <label for="email"><b>Email</b></label>
+              <input type="email" placeholder="Enter Email Address" name="email" required>
+          
+              <label for="telephone"><b>Telephone</b></label>
+              <input type="telephone" placeholder="Enter Telephone Number" name="telephone" required>
+          
+              <button type="submit" class="btn">Submit</button>
+              <button type="submit" class="btn cancel" onclick="closeForm()">Close</button>
+            </form>
+        </div>
+
         <div class="video">
         <video controls muted>
             <iframe width="591" height="360" src="https://www.youtube.com/embed/ZzmY7I5pgHs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <a href="https://video.search.yahoo.com/search/video;_ylt=Awr9GjCCYqheNhgA3UdXNyoA;_ylu=X3oDMTByNWU4cGh1BGNvbG8DZ3ExBHBvcwMxBHZ0aWQDBHNlYwNzYw--?p=videos+of+portland+oregon+city&fr=mcafee&turl=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOVP.kyfqeUI87Tscc1PlEk3C5gEsDh%26amp%3Bpid%3DApi%26w%3D144%26h%3D77%26c%3D7&rurl=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DZzmY7I5pgHs&tit=Portland+-+City+Video+Guide&w=144&h=78&pos=7&vid=47e1ca1a5557345622b267871b76a0d3&sigr=SrEpX8X8mhER&sigt=wddcWAmOVHZa&sigi=cTTQlkyyvmvv">Portland Video</a>
         </video>
         </div>
+
+        <script src="pg_390_assignment.js"></script>
+
     </body>
 
     <footer>
         <div class="footer">
-            <p>Portland Oregon is an old town.</p>
+            <p style="font-size:2vw;">Portland Oregon is an old town.</p>
         </div>
     </footer>
 
