--- a/Pg390_assignment.html
+++ b/Pg390_assignment.html
@@ -8,7 +8,15 @@
     </head>
 
     <body>
-
+        <div>
+            <ul>
+                <a href="#heading" id="link"><li>Home</li></a>
+                <a href="#column" id="link"><li>Description</li></a>
+                <a href="#table" id="link"><li>Form</li></a>
+                <a href="#video" id="link"><li>Video</li></a>
+                <a href="#footer" id="link"><li>Info</li></a>
+            </ul>
+        </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script>document.body.className += ' fade-out';
         $(function() {
@@ -18,6 +26,7 @@
 
         <div class="container">
             <div class="myImg">
+                <h1 id=heading>Portland</h1>
                 <img src="./Images/pdx.jpg" alt="Portland">
                 <div class="overlay"></div>
                 <div class="text"><h2>Welcome to Oregon</h2>h2></div>
@@ -27,6 +36,7 @@
 
         <div class="row">
             <div class="column"></div>
+            <hi id="column">Description</hi>
                 <p style="font-size:2vw;">Portland is the largest and most populous city in the U.S. state of Oregon and the seat of Multnomah County.
                 It is a major port in the Willamette Valley region of the Pacific Northwest, at the confluence of the Willamette and Columbia rivers. 
                 As of 2018, Portland had an estimated population of 653,115 making it the 25th most populated city in the United States and the second-most populous in the Pacific Northwest after Seattle.
@@ -43,6 +53,7 @@
         </div>
 
         <div class="table">
+            <hi id=table>Table</hi>
             <table style="width: 100%">
                 <tr>
                     <th>City</th>
@@ -77,6 +88,7 @@
         </div>
 
         <div class="video">
+            <hi id=video>Video</hi>
         <video controls muted>
             <iframe width="591" height="360" src="https://www.youtube.com/embed/ZzmY7I5pgHs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <a href="https://video.search.yahoo.com/search/video;_ylt=Awr9GjCCYqheNhgA3UdXNyoA;_ylu=X3oDMTByNWU4cGh1BGNvbG8DZ3ExBHBvcwMxBHZ0aWQDBHNlYwNzYw--?p=videos+of+portland+oregon+city&fr=mcafee&turl=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOVP.kyfqeUI87Tscc1PlEk3C5gEsDh%26amp%3Bpid%3DApi%26w%3D144%26h%3D77%26c%3D7&rurl=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DZzmY7I5pgHs&tit=Portland+-+City+Video+Guide&w=144&h=78&pos=7&vid=47e1ca1a5557345622b267871b76a0d3&sigr=SrEpX8X8mhER&sigt=wddcWAmOVHZa&sigi=cTTQlkyyvmvv">Portland Video</a>
@@ -89,6 +101,7 @@
 
     <footer>
         <div class="footer">
+            <hi id=footer>Footer</hi>
             <p style="font-size:2vw;">Portland Oregon is an old town.</p>
         </div>
     </footer>
